--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta charset="utf-8">
 
-    <title>JavaScript User Interaction</title>
+    <title>Javascript Sliders</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <script src="scratchpad.js" type="text/javascript">
 </script>
 </head>
 
 <body>
-    <div class="red shadowed stuff-box">
+    <div class="red box">
 		<form>
 			<input type="range" min="0" max="11" value="0"
 						onchange="fibSlider(this)">
 			<button type="button" onclick="fibButton(this)">Fib(0)</button>
 		</form>
 	</div>
-    <div class="green shadowed stuff-box">
+    <div class="green box">
 		<form>
 			<input type="range" min="0" max="11" value="0"
 						onchange="pellSlider(this)">
 			<button type="button" onclick="pellButton(this)">Pell(0)</button>
 		</form>
 	</div>
-    <div class="blue shadowed stuff-box">
+    <div class="blue box">
 		<form>
 			<input type="range" min="0" max="11" value="0"
 						onchange="tribSlider(this)">
